kubernetes/progimage-filters.yaml
apiVersion: v1
kind: Service
metadata:
  name: progimage-filters
  labels:
    app: progimage-filters
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: progimage-filters
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progimage-filters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: progimage-filters
  template:
    metadata:
      labels:
        app: progimage-filters
    spec:
      containers:
        - name: progimage-filters
          image: localhost:5000/progimage-filters:latest
          ports:
            - containerPort: 10004
              name: web
          livenessProbe:
            httpGet:
              path: /health
              port: web
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: web
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /health
              port: web
            failureThreshold: 30
            periodSeconds: 3
