kubernetes/progimage-storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: progimage-storage
  labels:
    app: progimage-storage
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: progimage-storage
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: progimage-storage
spec:
  serviceName: "progimage-storage"
  replicas: 1
  selector:
    matchLabels:
      app: progimage-storage
  template:
    metadata:
      labels:
        app: progimage-storage
    spec:
      containers:
        - name: progimage-storage
          image: localhost:5000/progimage-storage:latest
          ports:
            - containerPort: 10001
              name: web
          volumeMounts:
            - name: data
              mountPath: /data/progimage
          livenessProbe:
            httpGet:
              path: /health
              port: web
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: web
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /health
              port: web
            failureThreshold: 30
            periodSeconds: 3
      volumes:
        - name: data
          hostPath:
            path: /data/progimage
            type: DirectoryOrCreate
