kubernetes/progimage-thumbnail.yaml
apiVersion: v1
kind: Service
metadata:
  name: progimage-thumbnail
  labels:
    app: progimage-thumbnail
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: progimage-thumbnail
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progimage-thumbnail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: progimage-thumbnail
  template:
    metadata:
      labels:
        app: progimage-thumbnail
    spec:
      containers:
        - name: progimage-thumbnail
          image: localhost:5000/progimage-thumbnail:latest
          ports:
            - containerPort: 10005
              name: web
          livenessProbe:
            httpGet:
              path: /health
              port: web
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: web
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /health
              port: web
            failureThreshold: 30
            periodSeconds: 3
